@@ -425,8 +425,9 @@ include_once('include/page_header.php');
 			}
 
 			$result = CHost::massUpdate(array_merge($hosts, $new_values));
-			if($result === false) throw new Exception();
-
+			if ($result === false) {
+				throw new Exception();
+			}
 
 			$add = array();
 			if(!empty($templates) && isset($visible['template_table'])){
