@@ -1,5 +1,6 @@
 Changes for 1.8.9rc1
 
+ - [ZBX-4352] fixed template linking when mass updating hosts (pavels,Vedmak)
  - [ZBX-4325] fixed maintenance periods saved with nonzero seconds (asaveljevs,Vedmak)
  - [ZBX-4345] fixed counting of recursive dependency levels for triggers (asaveljevs)
  - [ZBX-4027] fixed floating-point comparison and unified epsilon in trigger functions and expressions (asaveljevs)
